# demoparser

benchmark/: main.py
src/csgoproto/: .gitignore  Cargo.toml  build.rs
src/csgoproto/src/: lib.rs  main.rs  message_type.rs  parser.rs  protobuf.rs
src/node/src/: lib.rs
src/parser/: Cargo.toml  README.md
src/parser/src/: definitions.rs  e2e_test.rs  exports.rs  lib.rs  maps.rs  parse_demo.rs  serde_helper.rs
src/parser/src/first_pass/: fallbackbytes.rs  frameparser.rs  parser.rs  parser_settings.rs  prop_controller.rs  read_bits.rs  sendtables.rs  stringtables.rs
src/parser/src/second_pass/: collect_data.rs  decoder.rs  entities.rs  game_events.rs  huffman_table.rs  mod.rs  other_netmessages.rs  parser.rs  parser_settings.rs  path_ops.rs  variants.rs  voice_data.rs
src/python/: Cargo.toml
src/python/src/: lib.rs
src/wasm/: Cargo.toml  build.sh
src/wasm/src/: lib.rs
src/wasm/www/pkg/: demoparser2.d.ts  demoparser2.js  demoparser2_bg.wasm  demoparser2_bg.wasm.d.ts
src/wasm/www/pkg/threads/: demoparser2.d.ts  demoparser2.js  demoparser2_bg.wasm  demoparser2_bg.wasm.d.ts
