[package]
name = "parser"
version = "0.1.1"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
bitter = "0.7.0"
prost = "0.13.3"
snap = "1.1.0"
ahash = "0.8.3"
nohash = "0.2.0"
regex = { version = "1.11.1", features = ["perf-dfa-full"] }
phf = "0.11.1"
phf_macros = "0.11.1"
itertools = "0.13.0"
lazy_static = "1.4.0"
memmap2 = "0.9.4"
serde = { version = "1.0.164", features = ["derive"] }
rayon = "1.7.0"
opus = { version = "0.3.0", optional = true }

[dependencies.csgoproto]
path = "../csgoproto"

[profile.dev]
overflow-checks = false

[profile.release]
debug = true

[features]
# default = ["voice"]
voice = ["opus"]
