[package]
name = "demoparser2"
version = "0.33.1"
edition = "2021"

[lib]
name = "demoparser2"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.3"
pyo3 = { version = "0.22", features = ["extension-module"] }
polars = "0.41.2"
polars-arrow = { version = "0.41.2" }
itertools = "0.13.0"

[dependencies.parser]
path = "../parser"

[profile.dev]
overflow-checks = false

[profile.release]
lto = "thin"

[features]
default = ["parser/voice", "voice"]
voice = []